<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Information">
    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="52sp"
        android:textStyle="bold"
        android:text="Information"
        android:textColor="@color/purple_700"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="4">


        <ImageView
            android:id="@+id/ivCall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_call_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/ivEmail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_email_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/ivEdit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            tools:ignore="SpeakableTextPresentCheck" />
        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_delete_24"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <EditText
        android:id="@+id/edtEditContactName"
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_name"
        android:minHeight="48dp"
        android:textColorHint="#673AB7" />

    <EditText
        android:id="@+id/edtEditContactNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_mobile_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#673AB7" />

    <EditText
        android:id="@+id/edtEditContactEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_e_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#673AB7" />

    <Button
        android:id="@+id/btnchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/buttons"
        android:text="@string/change_contact"
        android:textStyle="bold" />


</LinearLayout>